Fix ad image overlap border radius.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -49,11 +49,11 @@ p {
 
 .pic {
   background-image: url('../img/diagonal-line.png');
-  border-radius: 5px 5px 0 0;
+  border-radius: 8px 8px 0 0;
 
   img {
     background: url('../img/spinner.gif') no-repeat center center;
-    border-radius: 5px 5px 0 0;
+    border-radius: 4px 4px 0 0;
   }
 }
 
